assets/sass/main.scss
@import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700|Playfair+Display&display=swap');
//@import url('https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css');
@import '~bootstrap/scss/bootstrap';

/*
@include media-breakpoint-up(xs) { ... }
@include media-breakpoint-up(sm) { ... }
@include media-breakpoint-up(md) { ... }
@include media-breakpoint-up(lg) { ... }
@include media-breakpoint-up(xl) { ... }
*/

@import "variables";
@import "microclearfix";
@import "typography";


body {
    background-color: lighten(blue, 40%);
    background-image: url('../images/blue_blurred_small.jpg');
    background-size: cover;
    background-attachment: fixed;

    position: relative;
    min-height: 100vh;
}

.wrapper.content {

    box-shadow: 0 0 2rem darken(cadetblue, 40%);
    min-height: 100vh - $header_height - $footer_height;
    padding-bottom: 20vh;
    padding-top: 1rem;
    //margin-top: -1rem;
}

.container.content {
    padding-top: 1rem;
    padding-bottom: 1rem;

    margin-top: 1rem;
    margin-bottom: 1rem;

    background-color: darken(rgba($ocean_blue, 0.4), 60%);
    box-shadow: 0 0 2rem darken(rgba($ocean_blue, 0.7), 60%);

    border-radius: 3px;

    @include media-breakpoint-down(md) {
        max-width: 95%;
    }
}

header,
footer {
    background-color: darken(rgb(100, 0, 255), 40%);
    background-image: url('../images/black_blurred_small.jpg');
    background-size: cover;
    background-position-y: center;
    background-attachment: fixed;
}

header {
    height: $header_height;

    box-shadow: 0 0 2rem darken(cadetblue, 30%);
    position: relative;
    z-index: 2;

    overflow: hidden;

    display: flex;
    flex-direction: column-reverse;

    div.container {}
}

h1,
h2 {
    filter: drop-shadow(0 3px 0.75rem darken($header_color, 70%));
}

footer {
    position: absolute;
    height: $footer_height;
    width: 100%;
    bottom: 0px;

    z-index: -1;

    padding-top: 2rem;
}

p img {
    // max-width: 20%;
    border-radius: 5px;
    margin: 0.5rem 1.5rem;

    &.float-right,
    &.float-left {
        // on tiny display actually ignore float
        float: none;
        margin: 2.2rem 10%;
        width: 80%;

        @include media-breakpoint-up(md) {
            margin: 1rem 0.5rem;
            max-width: 25%;
            max-height: 80%;
        }
    }

    &.float-left {
        @include media-breakpoint-up(md) {
            float: left;
        }
    }

    &.float-right {
        @include media-breakpoint-up(md) {
            float: right;
        }
    }


}

